@@ -237,4 +237,72 @@
     dialog box; see <xref linkend="status-bar-pane"/>.
    </para>
  </sect1>
+ <sect1 id="action-bar"><title>The Action Bar</title>
+  <para>
+   The action bar allows almost any editor feature to be accessed from the keyboard.
+  </para>
+  <para>
+   <guimenu>Utilities</guimenu>&gt;<guimenuitem>Action Bar</guimenuitem> (shortcut: <keycap>C+ENTER</keycap>) displays the action bar at the bottom of the view and gives it keyboard focus. The action bar remembers previously entered strings; see <xref linkend="history" /> for details.
+  </para>
+  <para>
+   To use the action bar, input a command and press <keycap>Enter</keycap>.
+   The following commands are supported:
+  </para>
+  <itemizedlist>
+   <listitem><bridgehead renderas="sect3">Action invocations</bridgehead>
+   <para>
+    Each menu item and tool bar button is bound to an <firstterm>action</firstterm>. To find out the name of an action, invoke the menu item or click the tool bar button, and look in the action bar's history.
+   </para>
+   <para>
+    If a substring or an action name is entered, pressing <keycap>Tab</keycap> shows a popup listing matching actions. An action can be selected using the
+    <keycap>Up</keycap> and <keycap>Down</keycap> arrow keys, or by entering more characters of its name.
+   </para>
+   <para>
+    Pressing <keycap>Enter</keycap> with an incomplete substring invokes the action that would be first in the completion popup's list.
+   </para>
+   <para>
+    For example, entering <userinput>l-o</userinput> will match <userinput>global-options</userinput>, which has the same effect as invoking <guimenu>Utilities</guimenu>&gt;<guimenuitem>Global Options</guimenuitem>.
+   </para>
+   </listitem>
+   <listitem>
+   <bridgehead renderas="sect3">Buffer-local properties</bridgehead>
+   <para>
+    Entering <userinput>buffer.<replaceable>property</replaceable>=<replaceable>value</replaceable></userinput> sets the value of the buffer-local property named <userinput><replaceable>property</replaceable></userinput> to <userinput><replaceable>value</replaceable></userinput>.
+    Buffer-local properties are documented in <xref linkend="buffer-local"/>.
+   </para>
+   <para>
+    For example, entering <userinput>buffer.tabSize=4</userinput> changes the current buffer's tab size to 4.
+   </para>
+   <para>
+    See <xref linkend="buffer-local"/> for information about buffer-local properties.
+   </para>
+   </listitem>
+   <listitem>
+   <bridgehead renderas="sect3">Global properties</bridgehead>
+   <para>
+    Entering <userinput><replaceable>property</replaceable>=<replaceable>value</replaceable> sets the value of the global property named <userinput><replaceable>property</replaceable></userinput> to <userinput><replaceable>value</replaceable></userinput>.
+    </userinput> This feature is primarily intended to help plugin develpers, since the properties jEdit uses to store its settings are not currently documented.
+   </para>
+   </listitem>
+   <listitem>
+   <bridgehead renderas="sect3">Command repetition</bridgehead>
+   <para>
+   To repeat a command multiple times, enter a number in the action bar, then invoke the command. For example,
+   <quote><keycap>C+ENTER</keycap> <keycap>1</keycap> <keycap>4</keycap>
+   <keycap>C+d</keycap></quote> will delete
+   14 lines; <quote><keycap>C+ENTER</keycap> <keycap>9</keycap>
+   <keycap>#</keycap></quote>
+   will insert <quote>#########</quote> in the buffer.
+  </para>
+  <para>
+   If you specify a repeat count greater than 20, a confirmation dialog box will
+   be displayed, asking if you really want to perform the action. This prevents
+   you from hanging jEdit by executing a command too many times.
+  </para>
+  </listitem>
+ </itemizedlist>
+  <para>
+   <guimenu>Utilities</guimenu>&gt;<guimenuitem>Repeat Last Action</guimenuitem> (shortcut: <keycap>C+SPACE</keycap>) repeats the most recently invoked editor command.
+  </para>
+ </sect1>
 </chapter>
