@@ -1,4 +1,4 @@
-,<!-- jEdit buffer-local properties: -->
+<!-- jEdit buffer-local properties: -->
 <!-- :tabSize=1:indentSize=1:noTabs=true:wrap=soft:maxLineLen=80: -->
 <!-- :xml.root=users-guide.xml: -->
 
